# InterviewPreparationWithAI

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  HANDOFF_SUMMARY.md  README.md  RUN_APP.md  app.py  config.py  direct_test_models.py  main.py  main_gui.py  pyproject.toml  requirements.txt  skills-lock.json  test_models_simple.py  test_parsing_fix.py  test_question_generation.py  test_setup.py  test_simple_models.py
docs/: GUI_streamlit_spec.md  mock_interview_ui_bdd.md  technical-spec-markdown.md
exports/: session_history.json
openspec/: MIGRATION_REPORT.md  config.yaml
src/: __init__.py  app.py  config.py  pyproject.toml
src/ai/: __init__.py  chain_of_thought.py  few_shot.py  generator.py  parser.py  prompts.py  role_based.py  structured_output.py  zero_shot.py
src/models/: enums.py  schemas.py  simple_schemas.py
src/ui/: components.py  error_display.py  session.py
src/utils/: cost.py  error_handler.py  logger.py  rate_limiter.py  security.py
tests/: TEST_COVERAGE_SUMMARY.md  debug_test.py  direct_test_models.py  prove_static_analysis_issue.py  security_demo.py  test_app_unit.py  test_chain_of_thought_simple.py  test_complete_system.py  test_config.py  test_cost_integration.py  test_cost_simple.py  test_critical_fixes.py  test_direct_models.py  test_edge_cases_comprehensive.py  test_error_handling_integration.py  test_error_handling_simple.py  test_few_shot_simple.py  test_generator_integration.py  test_generator_simple.py  test_gui_integration.py  test_main_gui_unit.py  test_mock_interview_bdd.py  test_models.py  test_models_simple.py  test_parser.py  (+16 more)
(+26 files in other folders)
