[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InterviewPreparationWithAI"
version = "0.0.1"
description = "AI-powered interview preparation assistant with personalized question generation"
authors = [{ name = "Oleg Reva", email = "virtualmaestro@gmail.com" }]

dependencies = [
    "streamlit >= 1.49.1",
    "openai >= 1.106.1",
    "python-dotenv >= 1.1.1",
    "pydantic >= 2.11.7",
    "tenacity >= 9.1.2",
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest >= 8.4.2", "pytest-asyncio >= 1.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "models*", "ui*", "utils*", "exports*", "logs*"]
